@@ -1,3 +1,10 @@
+2015-04-26  Arjen Markus <arjenmarkus@users.sourceforge.net>
+	* statistics.tcl: Bump version to 0.9.3
+	                  Implemented an alternative to histogram (ticket 1502400fff)
+	                  Revised test-normal to use "significance" (ticket 2812473fff)
+	* statistics.man: Describe histogram-alt, changes to test-normal (and t-test-mean, again "confidence")
+	* pdf_stat.tcl: Correct the returned value for pdf-beta - if x is 0 or 1.
+
 2014-09-27  Arjen Markus <arjenmarkus@users.sourceforge.net>
 	* statistics.tcl: Bump version to 0.9.2
 	* statistics.test: Add tests for all pdf-* and cdf-* procedures, crude tests for random-* procedures
